gap fix

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -335,8 +335,8 @@ body {
 /* Hero Section */
 .hero {
     position: relative;
-    min-height: 100vh;
-    /*background: #FDD835;*/
+    /*min-height: 100vh;
+    background: #FDD835;*/
     overflow: hidden;
 }
 
